# ds

./: CMakeLists.txt  a  brk.c  f.c  makefile  malloc.c.h  malloc.h  mem.c  mk.txt  sbrk.c  tree.cc  words.txt
include/: avltree.h
malloc/: malloc.c.h  malloc.h
malloc/src/: c.c  mem.c  sbrk.c
mems/: b.s  brk.c  c.c  cl.s  ex.c  m.s  main.c  malloc.c  mem.c  mmap.c  sbr.c  simple.c
misc/: endword.c  g.c  graph.c  ll.c  n.c
src/: avl.c  makefile
tests/: tree.c  words.txt
tree/: avltree.h  node.c  t.txt  types.h
